# examplesys

./: cabal.project  examplesys.cabal  flake.nix
app/: Main.hs
data/: item.json  loan.json  privilege.json  role.json  tab.json  token.json  user.json
src/: Piece.hs  Piece2.hs
src/Piece/: CakeSlayer.hs  Config.hs
src/Piece/App/: Env.hs  Env2.hs  Error.hs  Error2.hs  Monad.hs  Monad2.hs  Monad3.hs  UserEnv.hs
src/Piece/CakeSlayer/: Error.hs  Has.hs  Monad.hs  Password.hs
src/Piece/Core/: Item.hs  ItemCreateForm.hs  ItemDeleteForm.hs  ItemEditForm.hs  Loan.hs  LoanCreateForm.hs  Privilege.hs  Role.hs  Tab.hs  Time.hs  Token.hs  User.hs  UserCreateForm.hs  UserEditForm.hs  UserForm.hs  UserLoginForm.hs
src/Piece/Core/Form/: FormDataExpr.hs  FormDataExpr2.hs
src/Piece/Db/: Db.hs  Item.hs  Json.hs  ListZipper.hs  Loan.hs  Loan2.hs  Privilege.hs  Role.hs  Tab.hs  Token.hs  User.hs
src/Piece/Effects/: Change.hs  Change2.hs  Read.hs  Time.hs  Token.hs  Write.hs
src/Piece/Gui/Checkbox/: Checkbox.hs
src/Piece/Gui/Elements/: Elements.hs
src/Piece/Gui/Item/: Behavior.hs  Create.hs  Edit.hs  List.hs
src/Piece/Gui/Loan/: Behavior.hs  Create.hs  Create2.hs
src/Piece/Gui/Tab/: Behavior.hs  Tab.hs  Tab2.hs  TabButton.hs  TabView.hs
src/Piece/Gui/Time/: Time.hs
src/Piece/Gui/User/: Behavior.hs  Create.hs  Edit.hs  List.hs  Login.hs
src/Piece/Time/: Time.hs
static/: index.html
test/: Spec.hs
test/Piece/Core/Item/: Tests.hs
test/Piece/Core/Loan/: Tests.hs
test/Piece/Core/User/: Tests.hs
test/Piece/Db/Db/: Tests.hs
test/Piece/Db/Loan/: Tests.hs
test/Piece/Db/Tab/: Tests.hs
test/Piece/Db/Token/: Tests.hs
test/Piece/Db/User/: Tests.hs
test/Piece/Effects/Change/: Tests.hs
test/Piece/Effects/Read/: Tests.hs
test/Piece/Effects/Write/: Tests.hs
test/Piece/Gui/Loan/Behavior/: Tests.hs
test/TestSuite/: Mock.hs  Util.hs
test/data/: loan.json
