cabal-version: 3.0

name: examplesys
version: 1.0.0.0

common common-all
    build-depends:
        base >=4.16 && <5
        , profunctors
        , extra
        , monad-control
        , random
        , bcrypt
        , ilist
        , time
        , transformers-base
        , lens
        , stm
        , mtl
        , transformers
        , relude
        , aeson
        , unliftio
        , unliftio-core
        , containers
        , threepenny-gui
        , exceptions
        , async
        , retry
        , comonad
    other-modules:
        Piece.Gui.Tab.Behavior
        Piece.Gui.Checkbox.Checkbox
        Piece.Gui.Time.Time
        Piece.Db.Tab
        Piece.Db.Role
        Piece.Db.Token
        Piece
        Piece.Core.Role
        Piece.Core.Time
        Piece.App.Env
        Piece.App.UserEnv
        Piece.Gui.Tab.TabView
        Piece.Gui.Tab.TabButton
        Piece.App.Error
        Piece.App.Monad
        Piece.CakeSlayer
        Piece.Core.Tab
        Piece.CakeSlayer.Error
        Piece.CakeSlayer.Has
        Piece.CakeSlayer.Password
        Piece.CakeSlayer.Monad
        Piece.Config
        Piece.Effects.Write
        Piece.Effects.Time
        Piece.Effects.Read
        Piece.Core.Item
        Piece.Core.Loan
        Piece.Core.User
        Piece.Gui.User.Login
        Piece.Core.UserCreateForm
        Piece.Core.UserLoginForm
        Piece.Core.Token
        Piece.Core.Privilege
        Piece.Db.Db
        Piece.Db.ListZipper
        Piece.Db.Loan
        Piece.Db.Privilege
        Piece.Db.User
        Piece.Time.Time
        Piece.Gui.Loan.Create
        Piece.Gui.Loan.Behavior
        Piece.Gui.User.Create
        Piece.Gui.User.Behavior
        Piece.Gui.User.List

    mixins:
        base hiding (Prelude)
        , relude (Relude as Prelude)
        , relude

    default-language: Haskell2010

    default-extensions:
        ConstraintKinds
        DeriveAnyClass
        DeriveFoldable
        DeriveTraversable
        DeriveFunctor
        DeriveGeneric
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        ViewPatterns
        DerivingVia
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import: common-all
    build-depends:
    hs-source-dirs:   src

executable examplesys
    import: common-all
    main-is: Main.hs
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs: app, src

test-suite examplesys-test
    import: common-all
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Piece.Core.Item.Tests
        Piece.Db.Loan.Tests
        Piece.Db.Token.Tests
        Piece.Db.Tab.Tests
        Piece.Db.Db.Tests
        Piece.Db.User.Tests
        Piece.Effects.Write.Tests
        Piece.Effects.Read.Tests
        Piece.Gui.Loan.Behavior.Tests
        TestSuite.Util
        TestSuite.Mock
    hs-source-dirs:
        src, test
    build-depends:
        , tasty
        , tasty-hunit
